test/fails/bad_parsing/constants7.lgl
print [1.2, 5.3]:vec2:vec2;